--- a/ruth/index.css
+++ b/ruth/index.css
@@ -3,15 +3,26 @@ a{
 	color:black;
 }
 
+.name{
+	position:absolute;
+	font-family:Raleway;
+	font-weight:600;
+	font-size:18px;
+	top:30px;
+	left:200px;
+}
+
 .exercises{
+	line-height:21px;
 	position:absolute;
 	top:80px;
 	left:200px;
 }
 
 .projects{
+	line-height:21px;
 	position:absolute;
-	top:330px;
+	top:450px;
 	left:200px;
 }
 
