--- a/sam/exercise6/stylesheet.css
+++ b/sam/exercise6/stylesheet.css
@@ -1,91 +1,91 @@
+body {padding: 10px;}
 
-            #box1 {
-                height: 100px;
-                width: 100px;
-                background: yellow;
-                position: absolute;    
-            }
-            #box2 {
-                height: 100px;
-                width: 100px;
-                background: red;
-                position: absolute;
-                top: 150px;
-            }
-            #box3 {
-                height: 100px;
-                width: 100px;
-                background: blue;
-                position: absolute;
-                top: 300px;
-            }
-            #box4 {
-                height: 100px;
-                width: 100px;
-                background: yellow;
-                position: absolute;
-                top: 450px;
-            }
-            #box5 {
-                height: 100px;
-                width: 100px;
-                background: red;
-                position: absolute; 
-                left: 150px;
-            }
-            #box6 {
-                height: 100px;
-                width: 100px;
-                background: blue;
-                position: absolute;
-                top: 150px;
-                left: 150px;
-            }
-            #box7 {
-                height: 100px;
-                width: 100px;
-                background: yellow;
-                position: absolute;
-                top: 300px;
-                left: 150px;
-            }
-            #box8 {
-                height: 100px;
-                width: 100px;
-                background: red;
-                position: absolute;
-                top: 450px;
-                left: 150px;
-            }
-            #box9 {
-                height: 100px;
-                width: 100px;
-                background: yellow;
-                position: absolute; 
-                left: 290px;
-            }
-            #box10 {
-                height: 100px;
-                width: 100px;
-                background: red;
-                position: absolute;
-                top: 150px;
-                left: 290px;
-            }
-            #box11 {
-                height: 100px;
-                width: 100px;
-                background: blue;
-                position: absolute;
-                top: 300px;
-                left: 290px;
-            }
-            #box12 {
-                height: 100px;
-                width: 100px;
-                background: red;
-                position: absolute;
-                top: 450px;
-                left: 290px;
-            }
-     
+#box1 {
+height: 100px;
+width: 100px;
+background: yellow;
+position: absolute;    
+}
+#box2 {
+height: 100px;
+width: 100px;
+background: red;
+position: absolute;
+top: 150px;
+}
+#box3 {
+height: 100px;
+width: 100px;
+background: blue;
+position: absolute;
+top: 300px;
+}
+#box4 {
+height: 100px;
+width: 100px;
+background: yellow;
+position: absolute;
+top: 450px;
+}
+#box5 {
+height: 100px;
+width: 100px;
+background: red;
+position: absolute; 
+left: 150px;
+}
+#box6 {
+height: 100px;
+width: 100px;
+background: blue;
+position: absolute;
+top: 150px;
+left: 150px;
+}
+#box7 {
+height: 100px;
+width: 100px;
+background: yellow;
+position: absolute;
+top: 300px;
+left: 150px;
+}
+#box8 {
+height: 100px;
+width: 100px;
+background: red;
+position: absolute;
+top: 450px;
+left: 150px;
+}
+#box9 {
+height: 100px;
+width: 100px;
+background: red;
+position: absolute; 
+left: 290px;
+}
+#box10 {
+height: 100px;
+width: 100px;
+background: yellow;
+position: absolute;
+top: 150px;
+left: 290px;
+}
+#box11 {
+height: 100px;
+width: 100px;
+background: red;
+position: absolute;
+top: 300px;
+left: 290px;
+}
+#box12 {
+height: 100px;
+width: 100px;
+background: blue;
+position: absolute;
+top: 450px;
+left: 290px;
+}
