--- a/ji/index.css
+++ b/ji/index.css
@@ -2,6 +2,7 @@ body {
 	text-align: left;
 	margin-top: 0px;
 	padding-top: 0px;
+	font-family: 'Amatic SC', cursive;
 }
 
 a {
@@ -13,7 +14,6 @@ a {
 
 a:hover {
 	color: red;
-	font-size: 20px;
 }
 
 div {
