--- a/ji/index.css
+++ b/ji/index.css
@@ -1,35 +1,59 @@
-body {
-	text-align: left;
-	margin-top: 0px;
-	padding-top: 0px;
-	font-family: 'Amatic SC', cursive;
+html {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
+body {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	margin: 0px;
+	padding: 0px;
+	font-family: 'Amatic SC', cursive;
+	font-size: 2em;
+}
+
+p {
+	line-height: 0.6em;
+}
 a {
+	color: black;
+	text-decoration: none;
+
 	transition-property: color, font-size;
 	transition-duration: 0.5s;
 	transition-timing-function: ease-in-out;
-	transition-delay: 0.1s;
+	transition-delay: 0s;
 }
 
 a:hover {
-	color: red;
+	color: pink;
+	font-weight: bold;
+	text-decoration: none;
 }
 
 div {
 	width: 100%;
-	height: 100px;
-	background-color: purple;
+	height: 150px;
+	background-color: pink;
 	color: white;
+	padding-top: 1px;
+	padding-bottom: 5px;
 }
 
 h1 {
-	padding: 30px;
+	font-size: 3em;
 }
 
 @media only screen and (min-width : 320px) and (max-width : 673px) {
 	div {
-		height: 150px;
+		height: 100px;
 		background-color: pink;
+	}
+
+	h1 {
+		font-size: 2em;
 	}
 }
